View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029888 | Open CASCADE | OCCT:Data Exchange | public | 2018-06-20 21:08 | 2018-06-30 13:34 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0029888: [Regression] Data Exchange - XCAFDoc_Editor::Expand() removes names | ||||
Description | Some names in the Document are last after performing XCAFDoc_Editor::Expand(). This is a regression after 0029599. | ||||
Steps To Reproduce | bugs xde bug 29888_1 bugs xde bug 29888_2 pload XDE XOpen Lantern.xbf D set aNameBefore [XCheckProps D 0 0:1:1:3] XExpand D 0 set aNameAfter [XCheckProps D 0 0:1:1:3] if { $aNameBefore != $aNameAfter } { puts "Error: name has been lost" } Expected output: Label 0:1:1:3 "LanternPole_Body" Actual output: Label 0:1:1:3 "FACE" | ||||
Tags | No tags attached. | ||||
Test case number | bugs/xde/bug29888_1, bugs/xde/bug29888_2 | ||||
|
Lantern.xbf (166,905 bytes) |
|
Branch CR29888 has been created by ika. SHA-1: df49d25e20d9fb88450c43a182b34bfd38e11476 Detailed log of new commits: Author: ika Date: Thu Jun 21 17:21:02 2018 +0300 0029888: [Regression] Data Exchange - XCAFDoc_Editor::Expand() removes names Add check to prohibit expanding references to assemblies. |
2018-06-22 14:58 developer |
bug29888.xbf (166,905 bytes) |
2018-06-22 14:58 developer |
bug29888_part.xbf (166,682 bytes) |
|
Dear GKA, could you please review branch CR29888? Test results: http://occt-tests/CR29888-master-ika-OCCT/Windows-64-VC10/diff_summary.html http://occt-tests/CR29888-master-ika-OCCT/Debian70-64/diff_summary.html http://occt-tests/CR29888-master-ika-Products/Windows-64-VC10/diff_summary.html http://occt-tests/CR29888-master-ika-Products/Debian70-64/diff_summary.html |
|
Dear SSV, could you please review branch CR29888? Test results are in the previous note. |
|
Reviewed (no remarks). |
|
Shapes were added to data repository |
|
Combination - OCCT branch : CR29888 SHA - df49d25e20d9fb88450c43a182b34bfd38e11476 Products branch : master SHA - 9ac004afdb7f325fbc12a45c765b6a8f88d4dc98 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian70-64: OCCT Total CPU difference: 17095.33999999986 / 17008.500000000095 [+0.51%] Products Total CPU difference: 7477.790000000012 / 7460.130000000034 [+0.24%] Windows-64-VC10: OCCT Total CPU difference: 16822.976238898576 / 16834.91031539858 [-0.07%] Products Total CPU difference: 8242.827638299887 / 8259.114142699882 [-0.20%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR29888 has been deleted by inv. SHA-1: df49d25e20d9fb88450c43a182b34bfd38e11476 |
occt: master 8cbf1f8d 2018-06-21 14:21:02
Committer: bugmaster Details Diff |
0029888: [Regression] Data Exchange - XCAFDoc_Editor::Expand() removes names XCAFDoc_Editor::Expand function avoids expanding references to assemblies. |
Affected Issues 0029888 |
|
mod - src/XCAFDoc/XCAFDoc_Editor.cxx | Diff File | ||
add - tests/bugs/xde/bug29888_1 | Diff File | ||
add - tests/bugs/xde/bug29888_2 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-06-20 21:08 | kgv | New Issue | |
2018-06-20 21:08 | kgv | Assigned To | => gka |
2018-06-20 21:08 | kgv | File Added: Lantern.xbf | |
2018-06-20 21:21 | kgv | Relationship added | child of 0029599 |
2018-06-20 21:21 | kgv | Description Updated | |
2018-06-20 21:22 | kgv | Summary | Data Exchange - XCAFDoc_Editor::Expand() removes names => [Regression] Data Exchange - XCAFDoc_Editor::Expand() removes names |
2018-06-20 21:22 | kgv | Assigned To | gka => ika |
2018-06-20 21:22 | kgv | Status | new => assigned |
2018-06-20 21:24 | kgv | Steps to Reproduce Updated | |
2018-06-22 13:16 | git | Note Added: 0076882 | |
2018-06-22 14:58 |
|
File Added: bug29888.xbf | |
2018-06-22 14:58 |
|
File Added: bug29888_part.xbf | |
2018-06-22 15:00 |
|
Note Added: 0076888 | |
2018-06-22 15:00 |
|
Assigned To | ika => gka |
2018-06-22 15:00 |
|
Status | assigned => resolved |
2018-06-22 15:00 |
|
Steps to Reproduce Updated | |
2018-06-25 13:49 |
|
Assigned To | gka => ika |
2018-06-25 13:50 |
|
Assigned To | ika => ssv |
2018-06-25 13:51 |
|
Note Added: 0077023 | |
2018-06-25 15:48 |
|
Note Added: 0077039 | |
2018-06-25 15:48 |
|
Assigned To | ssv => bugmaster |
2018-06-25 15:48 |
|
Status | resolved => reviewed |
2018-06-25 18:13 | bugmaster | Test case number | => bugs/xde/bug29888_1, bugs/xde/bug29888_2 |
2018-06-25 18:33 | bugmaster | Note Added: 0077045 | |
2018-06-25 18:35 | bugmaster | Note Added: 0077046 | |
2018-06-25 18:35 | bugmaster | Status | reviewed => tested |
2018-06-30 12:48 | bugmaster | Changeset attached | => occt master 8cbf1f8d |
2018-06-30 12:48 | bugmaster | Status | tested => verified |
2018-06-30 12:48 | bugmaster | Resolution | open => fixed |
2018-06-30 13:34 | git | Note Added: 0077139 |