0029888: [Regression] Data Exchange - XCAFDoc_Editor::Expand() removes names

XCAFDoc_Editor::Expand function avoids expanding references to assemblies.